.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/CRMfusionDBR101__Protected_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>CRMfusionDBR101__Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Type__c</fullName>
        <description>Data type.  ie: string/date/boolean</description>
        <label>Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Protected Settings</label>
</CustomObject>